--- a/miles.css
+++ b/miles.css
@@ -1,4 +1,5 @@
 body {
+    cursor: help;
     margin: 0;
     height: 100vh;
     background-color: rgb(255, 255, 255);
@@ -9,11 +10,8 @@ body {
     overflow: hidden;
 
      /* Dot p@ern  */
-    background: 
-    radial-gradient(circle, rgba(0, 0, 0, 0.1) 10%, transparent 11%) 0 0, 
-    radial-gradient(circle, rgba(0, 0, 0, 0.1) 10%, transparent 11%) 20px 20px, 
-    radial-gradient(circle, rgba(0, 0, 0, 0.1) 10%, transparent 11%) 40px 40px; /* adjust to cre8 smaller circles */
-background-size: 20px 20px; /* controls the size of the circles & the space between them */
+     background: radial-gradient(circle, rgba(0, 0, 0, 0.1) 10%, transparent 11%);
+     background-size: 12px 12px;
 }
 
 
@@ -25,7 +23,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 32%;
-    background: linear-gradient(to bottom, #2685c6, rgba(0, 0, 0, 0));
+    background: linear-gradient(to bottom, #328cc9 5%, rgba(0, 0, 0, 0));
     z-index: 2; 
 }
 
@@ -48,7 +46,7 @@ body::after {
     position: relative;
     z-index: 4; 
     text-align: center;
-    /*gap: 10px;*/
+    margin-bottom: 70px;
 }
 
 
@@ -57,36 +55,50 @@ body::after {
     font-family: "DotGothic16", serif;
     font-weight: 100;
     font-style: normal;
-    font-size: 70px;
+    font-size: 55px;
     margin-bottom: 0;
-    margin-left: 40px;
+    justify-content: center;
+    margin-left: 23px;
 }
 
 .main-subtitle {
     color: rgba(209, 211, 214, 0.8);
-    margin-top: 0;
-    margin-bottom: 12px;
+    margin-top: 10px;
+    margin-bottom: 25px;
     font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 10px;
+    font-family: 'Times New Roman', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: lighter;
+
 }
 
-.searchbox {
+.input_box {
      margin-bottom: 10px;
 }
 
 .search-box {
-    width: 340px;
-    height: 25px;
+    width: 320px;
+    height: 22px;
     padding: 10px;
-    background-color: yellow;
+    background-color: rgb(0, 0, 0);
     border: none;
     text-align: center;
-    font-size: 26px;
+    font-size: 15px;
+    margin-bottom: 20px;
+    color: white;
 }
 
 .search_button {
     background-color: transparent;
     border: none;
     color: white;
+    font-family: 'Courier Prime', Courier, monospace;
+    transition: background-color 0.5s ease, opacity 0.5s ease, transform, 0.5s ease;
+    position: relative;
+}
+
+.search_button:hover {
+  cursor: grab;
+  background-color: white;
+  color: black;
+  font-size: 12px;
 }
